--- a/Segmenting_Clustering_Neighborhoods.ipynb
+++ b/Segmenting_Clustering_Neighborhoods.ipynb
@@ -1070,8 +1070,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "CLIENT_ID = 'ZG3SB2ILJ5YVVPTHTXDFSMGLFU0QTZYOBBO4DM2PYFL40KCX' # your Foursquare ID\n",
-    "CLIENT_SECRET = 'UE2R10M4VTBOTP4GCV5DDM4RULEPG3FQBWIDDIJUQFXPRZ0V' # your Foursquare Secret\n",
+    "CLIENT_ID = 'REDACTED' # your Foursquare ID\n",
+    "CLIENT_SECRET = 'REDACTED' # your Foursquare Secret\n",
     "VERSION = '20180605' # Foursquare API version\n",
     "LIMIT = 100 # A default Foursquare API limit value\n"
    ]
@@ -4331,10 +4331,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
